# MuPlayer

./: .gitignore  get_libs.rb  readme.md
MuPlayer/: ContentView.swift  MuPlayer.entitlements  MuPlayerApp.swift  MusicScanner.swift
MuPlayer.xcodeproj/: project.pbxproj
MuPlayer/Assets.xcassets/lastfm.imageset/: Contents.json
MuPlayer/Backend/: AudioPlayerDelegate.swift  LastFM.swift  MusicScanner.swift
MuPlayer/Model/: LazyList.swift  MenuBarModel.swift  Model.swift  SearchModel.swift  SongProgressModel.swift
MuPlayer/Utils/: Globals.swift  SafeDispatchSourceTimer.swift
MuPlayer/Views/: AlbumListView.swift  ContentView.swift  DetailView.swift  FolderSelectionView.swift  MainView.swift  MediaControlView.swift  SearchView.swift  SeekSlider.swift  SettingsView.swift  StatusView.swift  TrackListView.swift  VolumeSliderView.swift
MusicPlayer/: AlbumSongSplitView.swift  ContentView.swift  FolderView.swift  Info.plist  MusicPlayer-Bridging-Header.h  MusicPlayerApp.swift  SearchView.swift  SeekSlider.swift  SettingsView.swift  WelcomeView.swift
MusicPlayer.xcodeproj/: project.pbxproj
MusicPlayer.xcodeproj/xcshareddata/xcschemes/: MusicPlayer.xcscheme
MusicPlayer/Backend/: AudioPlayer.swift  LastFM.swift  NowPlaying.swift
MusicPlayer/Model/: Globals.swift  LazyInit.swift  LazyList.swift  Types.swift  Util.swift
music-player-ffi/: .gitignore  Cargo.toml  build-framework.sh  build.rs
music-player-ffi/src/: lib.rs  schema.sql  types.rs
music-player-ffi/src/database/: error.rs  mod.rs  scan.rs
(+4 files in other folders)
